# fotla

./: .bumpversion.cfg  .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
docs/: api.md  installation.md  usage.md
fotla/backend/: Dockerfile  api.py  corpus_loader.py  encoder.py  fotla.py  retriever.py
fotla/backend/indexer/: __init__.py  base.py  elasticsearch.py
fotla/frontend/svelte/: package-lock.json  package.json
fotla/frontend/svelte/src/lib/components/: pagenate.svelte  search_item.svelte  searchbox.svelte
fotla/frontend/svelte/src/lib/type/: types.ts
fotla/frontend/svelte/src/lib/utils/: util.ts
fotla/frontend/svelte/src/routes/: +layout.svelte  +page.svelte
fotla/frontend/svelte/src/routes/search/: +page.server.ts  +page.svelte
tests/: __init__.py  test_fotla.py
vector_indexer/elasticsearch/: Dockerfile.jp  docker-compose.yml  mappngs.json
